--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,22 +12,29 @@
 
 </head>
 <body>
+    
     <header>
-        <nav class="mb-3" style="justify-content:space-between">
-            <a class="navbar-brand text-white d-flex align-items-center" asp-area="" asp-controller="Estoque" asp-action="Index">
-                <img src="~/Images/Logo.png" alt="Logo" style="width:350px; margin-right:10px"  />
+        <div class="text-center">
+            <a asp-area="" asp-controller="Estoque" asp-action="Index">
+                <img src="~/Images/Logo.png" alt="Logo" style="width:400px" />
             </a>
-            <div >
-                <div style="margin-left:10px;margin-top:10px">
-                    <a type="button" class="btn text-white px-1 mb-4" asp-controller="Estoque" asp-action="Index">
+        </div>
+
+
+        <nav class=" mb-4 navbar-brand text-white justify-content-md-center d-flex" style="margin-top:15px;">
+                <div>
+                <a class="btn btn-outline-secondary " type="button"  asp-controller="Estoque" asp-action="Index">
                         <img src="/Images/abrirEstoque.png" alt="Logo" class="custom-logo" style="width:40px" />
                     </a>
-                    <a type="button" class="btn text-white mb-4" asp-controller="Registro" asp-action="Registro">
-                        <img src="/Images/abrirRegistro.png" alt="Relogio" class="custom-logo" style="width:40px" />
+            </div>
+            <div>
+                <a class="btn btn-outline-secondary ms-1 me-4" type="button" asp-controller="Registro" asp-action="Registro">
+                        <img src="/Images/abrirRegistro.png" alt="Relogio" class="custom-logo" style="width:43px;" />
                     </a>
                 </div>
-            </div>
+           
         </nav>
+ 
     </header>
     <div class="container">
         <main role="main" class="pb-3">
