--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -16,13 +16,20 @@
                         <input asp-for="Id" id="Id" name="Id" type="hidden">
                         <input asp-for="Entrada" type="hidden">
                         <input required asp-for="Data" type="date" class="form-control mb-2" id="Data" placeholder="Data">
+                        <div>
+                        <input asp-for="Entrada" value="" type="radio" name="options-base" class="form-btn-check" id="option1"  autocomplete="off">
+                        <label class="btn" for="option1">Entrada</label>
+                        <input asp-for="Saida" value="" type="radio" name="options-base" class="form-btn-check" id="option2"  autocomplete="off">
+                        <label class="btn" for="option2">Saída</label>
+                        </div>
                         <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código">
                         <input required asp-for="Locacao" type="text" class="form-control mb-2" id="Locacao" placeholder="Locação">
-                        <input asp-for="Marca" type="text" class="form-control mb-2" id="Marca" placeholder="Marca">
-                        <input asp-for="Modelo" type="text" class="form-control mb-2" id="Modelo" placeholder="Modelo">
                         <input required asp-for="Quantidade" value="" type="number" class="form-control mb-2" id="Quantidade" placeholder="Quantidade">
                         <input required asp-for="NotaOuPedido" type="int" class="form-control mb-2" id="NotaOuPedido" placeholder="Nota Fiscal/Pedido">
                         <input required asp-for="Observacao" type="text" class="form-control mb-2" id="Observacao" placeholder="Observação">
+                        <input required asp-for="Usuario" type="text" class="form-control mb-2" id="Usuario" placeholder="Usuário">
+                        <input asp-for="Marca" type="text" class="form-control mb-2" id="Marca" placeholder="Marca">
+                        <input asp-for="Modelo" type="text" class="form-control mb-2" id="Modelo" placeholder="Modelo">
                     </div>
                 </div>
                 <div class="modal-footer">
