--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -12,14 +12,13 @@
                     <h5 class="modal-title">Entrada do Estoque</h5>
                 </div>
                 <div class="modal-body">
-                    <div class="mb-3">
+                    <div class="mb-1">
                         <input asp-for="Id" id="Id" name="Id" type="hidden">
-                        <input asp-for="Entrada" type="hidden">
                         <input required asp-for="Data" type="date" class="form-control mb-2" id="Data" placeholder="Data">
                         <div>
-                        <input asp-for="Entrada" value="" type="radio" name="options-base" class="form-btn-check" id="option1"  autocomplete="off">
+                        <input asp-for="Entrada" value="Entrada" type="checkbox" name="options-base" class="form-btn-check" id="option1"  autocomplete="off">
                         <label class="btn" for="option1">Entrada</label>
-                        <input asp-for="Saida" value="" type="radio" name="options-base" class="form-btn-check" id="option2"  autocomplete="off">
+                            <input asp-for="Saida" value="Saida" type="checkbox" name="options-base" class="form-btn-check" id="option2" autocomplete="off">
                         <label class="btn" for="option2">Saída</label>
                         </div>
                         <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código">
