--- a/Views/Estoque/Modal/SaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/SaidaEstoque.cshtml
@@ -1,4 +1,4 @@
-﻿@model TOLEAGRI.Model.Domain.Peca
+﻿@* @model TOLEAGRI.Model.Domain.Peca
 
 @{
     Layout = null;
@@ -35,4 +35,4 @@
     </div>
 </div>
 
-<script src="~/js/site.js"></script>
+<script src="~/js/site.js"></script> *@
