--- a/Views/Registro/Registro.cshtml
+++ b/Views/Registro/Registro.cshtml
@@ -26,8 +26,8 @@
                 <th>Quantidade</th>
                 <th>NF ou Pedido</th>
                 <th>Observação</th>
-                <th>Data</th>
                 <th>Usuário</th>
+                <th>Data</th>
                 <th>Entrada/Saída</th>
             </tr>
         </thead>
@@ -45,8 +45,12 @@
                     <td hidden>@item.Acao</td>
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
-                    <td>@item.Entrada</td>
-                    <td>@item.Saida</td>
+                    <td>@(item.EntradaOuSaida ? "Entrada" : "Saída")</td>
+                    <td style="width:1px">
+                    <a onClick="ModalDeletarRegistro(@item.Id)">
+                        <i class="bi bi-trash3-fill"></i>
+                    </a>
+                    </td>
                 </tr>
             }
         </tbody>
