Ainda não consegui terminar a questão de entrada e saida, ai por questão de facilidade comecei a configurar um botão para deletar tudo que tem de pecas na tabela, para ficar mais facil os testes posteriores quando voltar a mexer na questão da entrada e saida.

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -33,7 +33,11 @@
                 <th>Observação</th>
                 <th>Usuário</th>
                 <th>Data</th>
-                <th></th>
+                <th style="width:1px">
+                    <a onClick="ModalDeletarAllEstoque">
+                        <i class="bi bi-trash3-fill"></i>
+                    </a>
+                </th>
             </tr>
         </thead>
         <tbody id="pecas-list">
@@ -50,7 +54,7 @@
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
                     <td style="width:1px">
-                        <a onClick="ModalDeletarEstoque(@item.Id)">
+                        <a onClick="ModalDeletarAllEstoque(@item.Id)">
                             <i class="bi bi-trash3-fill"></i>
                         </a>
                     </td>
