Consegui ajeitar o deleteall

--- a/Views/Estoque/Modal/DeletarAllEstoque.cshtml
+++ b/Views/Estoque/Modal/DeletarAllEstoque.cshtml
@@ -13,7 +13,7 @@
                     <h5 class="modal-title">Excluir</h5>
                 </div>
                 <div class="modal-body">
-                    <p>Tem certeza que deseja excluir?</p>
+                    <p>Tem certeza que deseja excluir todos os itens?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-secondary">Sim</button>
