--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -54,7 +54,7 @@
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
                     <td style="width:1px">
-                        <a onClick="ModalDeletarAllEstoque(@item.Id)">
+                        <a onClick="ModalDeletarEstoque(@item.Id)">
                             <i class="bi bi-trash3-fill"></i>
                         </a>
                     </td>
