Consegui fazer a criação da entrada e saida, mas para isso tenho que tirar a tag "name" Porém quando tiro, o form permite escolher as duas opções ao mesmo tempo. Agora tenho que descobrir como resolver isso sem a tag "name"

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -8,7 +8,7 @@
     <div>
         <div class="mb-4" style="display:flex;justify-content:space-between">
             <div >
-                <a class="btn btn-outline-secondary" onClick="ModalEntradaSaidaEstoque()" id="btn-EntradaSaidaEstoque">
+                <a class="btn btn-outline-secondary" onClick="ModalEntradaSaidaEstoque()">
                     <img  src="~/Images/abrirModalEntradaSaida.png" style="width:45px" />
                 </a>
             </div>
@@ -34,7 +34,7 @@
                 <th>Usuário</th>
                 <th>Data</th>
                 <th style="width:1px">
-                    <a onClick="ModalDeletarAllEstoque">
+                    <a onClick="ModalDeletarAllEstoque()">
                         <i class="bi bi-trash3-fill"></i>
                     </a>
                 </th>
