Consegui fazer a pesquisa e a determinação entrada e saida funcionar

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -13,7 +13,7 @@
                 </a>
             </div>
             <div style="display:flex">
-                <input type="text" id="search-input-pecas" style="height:40px;width:265px" class="form-control" placeholder="Buscar" onkeydown="handleKeyDown(event)">
+                <input type="text" id="search-input-pecas" style="height:40px;width:265px" class="form-control" placeholder="Buscar" onkeydown="handleKeyDownPeca(event)">
                 <a id="search-input-icon-pecas">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
                 </a>
