Parte de pesquisa de filtragem ainda não ta 100%

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div style="display:flex">
                 <input type="text" id="search-input-pecas" style="height:40px;width:265px" class="form-control" placeholder="Buscar" onkeydown="handleKeyDownPeca(event)">
-                <a id="search-input-icon-pecas">
+                <a id="search-input-icon-pecas" onclick="searchIconPecas()">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
                 </a>
             </div>
