--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -1,18 +1,22 @@
-﻿@model IEnumerable<TOLEAGRI.Model.Domain.RegistroPeca>
+﻿@model IEnumerable<TOLEAGRI.Model.Domain.Peca>
 @{
-    ViewData["Title"] = "Registro";
-    var RegistrosOrdenados = Model.OrderBy(c => c.CodigoSistema).ToList();
+    ViewData["Title"] = "EstoqueIndex";
+    var PecasOrdenados = Model.OrderBy(c => c.CodigoSistema).ToList();
 }
 
-<div id="container">
+<div id="container" >
     <div>
         <div class="mb-4" style="display:flex;justify-content:space-between">
-            <div></div>
+            <div >
+                <a class="btn btn-outline-secondary" onClick="ModalEntradaSaidaEstoque()">
+                    <img  src="~/Images/abrirModalEntradaSaida.png" style="width:45px" />
+                </a>
+            </div>
             <div style="display:flex">
-                <input type="text" id="search-input-registro" style="height:40px;width:265px" class="form-control search" placeholder="Buscar" onkeydown="handleKeyDownRegistro(event)">
+                <input type="text" id="searchBarPeca" style="height:40px;width:265px" class="form-control search" placeholder="Buscar" onkeydown="EnterPeca(event)">
                 <input type="date" id="start-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Inicial">
                 <input type="date" id="end-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Final">
-                <a id="search-input-icon-registros" onclick="searchIconRegistros()" style="cursor: pointer;">
+                <a id="searchIconPecas" onclick="searchIconPecas()">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
                 </a>
             </div>
@@ -30,18 +34,12 @@
                 <th>Observação</th>
                 <th>Usuário</th>
                 <th>Data</th>
-                <th>Entrada/Saída</th>
-                <th style="width:1px">
-                    <a onClick="ModalDeletarAllRegistro()">
-                        <i class="bi bi-trash3-fill"></i>
-                    </a>
-                    </th>
             </tr>
         </thead>
-        <tbody id="registros-list">
-            @foreach (var item in RegistrosOrdenados)
+        <tbody id="pecas-list">
+            @foreach (var item in PecasOrdenados)
             {
-                <tr class="registro-row">
+                <tr class="peca-row">
                     <td>@item.CodigoSistema</td>
                     <td>@item.Locacao</td>
                     <td>@item.Marca</td>
@@ -51,16 +49,10 @@
                     <td>@item.Observacao</td>
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
-                    <td>@item.EntradaOuSaida</td>
-                    <td style="width:1px">
-                    <a onClick="ModalDeletarRegistro(@item.Id)">
-                        <i class="bi bi-trash3-fill"></i>
-                    </a>
-                    </td>
                 </tr>
             }
         </tbody>
     </table>
 </div>
 
-<script src="~/js/site.js"></script>
+<script src="~/js/EstoqueScript.js"></script>
