Criei o controller e as pages de manager e comecei a criar o form de login recriei o banco para aplicar o dominio novo "Login"

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -12,6 +12,9 @@
                     <img  src="~/Images/abrirModalEntradaSaida.png" style="width:45px" />
                 </a>
             </div>
+            <div>
+                <a class="btn btn-outline-secondary" asp-action="ModalLoginManager" asp-controller="Manager">Login</a>
+            </div>
             <div style="display:flex">
                 <input type="text" id="searchBarPeca" style="height:40px;width:265px" class="form-control search" placeholder="Buscar" onkeydown="EnterPeca(event)">
                 <input type="date" id="start-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Inicial">
