--- a/Views/Estoque/Modal/DeletarAllPeca.cshtml
+++ b/Views/Estoque/Modal/DeletarAllPeca.cshtml
@@ -4,16 +4,17 @@
 }
 
 
-<div id="modalDeletarAllEstoque" class="modal" tabindex="-1">
+<div id="modalDeletarAllPeca" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" asp-action="DeletarAllEstoque">
+            <form method="post" asp-action="DeletarAllPeca">
                 <input asp-for="Id" type="hidden">
                 <div class="modal-header">
                     <h5 class="modal-title">Excluir</h5>
                 </div>
                 <div class="modal-body">
                     <p>Tem certeza que deseja excluir todos os itens?</p>
+                    <input type="text" class="form-control" style="display:none">
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-secondary">Sim</button>
@@ -24,4 +25,4 @@
     </div>
 </div>
 
-<script src="~/js/EstoqueScript.js"></script>
+<script src="~/js/ManageScript.js"></script>
