--- a/Views/Estoque/Modal/DeletarPeca.cshtml
+++ b/Views/Estoque/Modal/DeletarPeca.cshtml
@@ -4,16 +4,17 @@
 }
 
 
-<div id="modalDeletarEstoque" class="modal" tabindex="-1">
+<div id="modalDeletarPeca" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" asp-action="DeletarEstoque">
-                <input asp-for="Id" type="hidden">
+            <form method="post" asp-action="DeletarPeca">
                 <div class="modal-header">
                     <h5 class="modal-title">Excluir</h5>
                 </div>
                 <div class="modal-body">
                     <p>Tem certeza que deseja excluir?</p>
+                    <input asp-for="Id" type="hidden">
+                    <input type="text" class="form-control" style="display:none">
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-secondary">Sim</button>
@@ -24,4 +25,4 @@
     </div>
 </div>
 
-<script src="~/js/EstoqueScript.js"></script>
+<script src="~/js/ManageScript.js"></script>
